environments/nightly/passport-status-api-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-api
      app.kubernetes.io/component: api
  template:
    spec:
      containers:
        - name: passport-status-api
          resources:
            requests:
              cpu: 2000m
              memory: 512Mi
            limits:
              cpu: 4000m
              memory: 2048Mi
