environments/nightly/passport-status-frontend-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-frontend
      app.kubernetes.io/component: frontend
  template:
    spec:
      containers:
        - name: passport-status-frontend
          imagePullPolicy: Always
