environments/nightly/passport-status-api-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-passport-status-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: azure/application-gateway
    # see https://azure.github.io/application-gateway-kubernetes-ingress/annotations/
    appgw.ingress.kubernetes.io/connection-draining: 'true'
    appgw.ingress.kubernetes.io/connection-draining-timeout: '30'
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: passport-status-api.nightly.dev-rhp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http
  tls:
    - hosts:
        - passport-status-api.nightly.dev-rhp.dts-stn.com
      secretName: external-passport-status-api-nightly

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-passport-status-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: passport-status-api.nightly.dev-rhp-private.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http
  tls:
    - hosts:
        - passport-status-api.nightly.dev-rhp-private.dts-stn.com
      secretName: internal-passport-status-api-nightly
