environments/nightly/passport-status-frontend-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: azure/application-gateway
    # see https://azure.github.io/application-gateway-kubernetes-ingress/annotations/
    appgw.ingress.kubernetes.io/connection-draining: 'true'
    appgw.ingress.kubernetes.io/connection-draining-timeout: '30'
    appgw.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: passport-status.nightly.dev-rhp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-frontend
                port:
                  name: http
  tls:
    - hosts:
        - passport-status.nightly.dev-rhp.dts-stn.com
      secretName: passport-status-frontend-nightly
